# matthes-seitz-catalog

./: .gitignore  LICENSE  README.md  pyproject.toml
src/matthes_seitz_catalog/: __init__.py  scraper.py
